@@ -3,14 +3,19 @@ package ru.job4j.io;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.function.Predicate;
 
 public class Search {
     public static void main(String[] args) throws IOException {
-        Path start = Paths.get(".");
-        search(start, p -> p.toFile().getName().endsWith(".js")).forEach(System.out::println);
+        validateArgs(args);
+        search(Path.of(args[0]), p -> p.toFile().getName().endsWith(args[1])).forEach(System.out::println);
+    }
+
+    private static void validateArgs(String[] args) {
+        if (args.length < 2) {
+            throw new IllegalArgumentException("Invalid args. Usage: <root path> <file extension>");
+        }
     }
 
     public static List<Path> search(Path root, Predicate<Path> condition) throws IOException {
